# glasscheck

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build.yml
crates/functional-ui/: Cargo.toml
crates/functional-ui-appkit/: Cargo.toml
crates/functional-ui-appkit/src/: capture.rs  harness.rs  lib.rs  text.rs  window.rs
crates/functional-ui-appkit/tests/: appkit_smoke.rs
crates/functional-ui-core/: Cargo.toml
crates/functional-ui-core/src/: assertions.rs  geometry.rs  lib.rs  text.rs  wait.rs
crates/functional-ui/src/: lib.rs
crates/glasscheck/: Cargo.toml
crates/glasscheck-appkit/: Cargo.toml
crates/glasscheck-appkit/src/: capture.rs  dialog.rs  harness.rs  input.rs  lib.rs  menu.rs  screen.rs  session.rs  text.rs  window.rs
crates/glasscheck-appkit/tests/: appkit_contracts.rs  appkit_smoke.rs
crates/glasscheck-core/: Cargo.toml
crates/glasscheck-core/src/: anchor.rs  assertions.rs  backend.rs  color_match.rs  geometry.rs  image.rs  layout.rs  lib.rs  query.rs  scene.rs  semantic.rs  text.rs  wait.rs
crates/glasscheck-gtk/: Cargo.toml
crates/glasscheck-gtk/src/: dialog.rs  harness.rs  input.rs  lib.rs  menu.rs  screen.rs  session.rs  text.rs  window.rs
crates/glasscheck-gtk/tests/: gtk_contracts.rs  gtk_smoke.rs
crates/glasscheck/src/: lib.rs
crates/glasscheck/tests/: facade_contracts_appkit.rs  facade_contracts_gtk.rs
