[package]
name = "functional-ui-appkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
functional-ui-core = { path = "../functional-ui-core" }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSColor",
    "NSFont",
    "NSFontManager",
    "NSRunningApplication",
    "NSView",
    "NSWindow",
    "NSEvent",
    "NSTextView",
    "NSText",
    "NSResponder",
    "NSClipView",
    "NSSplitView",
    "NSBitmapImageRep",
    "NSGraphicsContext",
    "NSUserInterfaceItemIdentification",
] }
objc2-foundation = { version = "0.3", features = [
    "NSDate",
    "NSRunLoop",
    "NSString",
    "NSRange",
    "NSAttributedString",
] }

[[test]]
name = "appkit_smoke"
harness = false
