[package]
name = "functional-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["appkit"]
appkit = ["dep:functional-ui-appkit"]

[dependencies]
functional-ui-core = { path = "../functional-ui-core" }
functional-ui-appkit = { path = "../functional-ui-appkit", optional = true }

