[package]
name = "glasscheck-appkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glasscheck-core = { path = "../glasscheck-core" }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSBezierPath",
    "NSButton",
    "NSColor",
    "NSControl",
    "NSFont",
    "NSFontManager",
    "NSGradient",
    "NSRunningApplication",
    "NSView",
    "NSWindow",
    "NSEvent",
    "NSTextView",
    "NSText",
    "NSResponder",
    "NSClipView",
    "NSSplitView",
    "NSScreen",
    "NSBitmapImageRep",
    "NSGraphicsContext",
    "NSUserInterfaceItemIdentification",
] }
objc2-foundation = { version = "0.3", features = [
    "NSDate",
    "NSRunLoop",
    "NSString",
    "NSRange",
    "NSAttributedString",
] }

[[test]]
name = "appkit_smoke"
harness = false

[[test]]
name = "appkit_contracts"
harness = false
