[package]
name = "glasscheck-appkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
native-smoke-tests = []
native-contract-tests = []

[dependencies]
glasscheck-core = { path = "../glasscheck-core" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSActionCell",
    "NSBezierPath",
    "NSButton",
    "NSButtonCell",
    "NSCell",
    "NSColor",
    "NSControl",
    "NSCell",
    "NSFont",
    "NSFontManager",
    "NSGradient",
    "NSGraphicsContext",
    "NSImageRep",
    "NSMenu",
    "NSMenuItem",
    "NSMenuItemCell",
    "NSRunningApplication",
    "NSView",
    "NSWindow",
    "NSEvent",
    "NSTextView",
    "NSText",
    "NSResponder",
    "NSClipView",
    "NSSplitView",
    "NSScreen",
    "NSBitmapImageRep",
    "NSUserInterfaceItemIdentification",
] }
block2 = "0.6"
objc2-core-graphics = { version = "0.3", features = [
    "CGEvent",
    "CGEventTypes",
    "CGGeometry",
    "CGRemoteOperation",
] }
objc2-foundation = { version = "0.3", features = [
    "NSDate",
    "NSRunLoop",
    "NSString",
    "NSRange",
    "NSAttributedString",
] }

[[test]]
name = "appkit_smoke"
harness = false
required-features = ["native-smoke-tests"]

[[test]]
name = "appkit_contracts"
harness = false
required-features = ["native-contract-tests"]
