[package]
name = "glasscheck"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
appkit = ["dep:glasscheck-appkit"]
gtk = ["dep:glasscheck-gtk"]

[dependencies]
glasscheck-core = { path = "../glasscheck-core" }
glasscheck-appkit = { path = "../glasscheck-appkit", optional = true }
glasscheck-gtk = { path = "../glasscheck-gtk", optional = true }
